--- a/form.html
+++ b/form.html
@@ -216,7 +216,7 @@ button{
 
 // Properly initialize Supabase client
 const { createClient } = supabase; // Destructure createClient from the global supabase object
-const supabaseClient = createClient("https://db.htbxnypwbgiwkwmqezmr.supabase.co", "sb_publishable_FqI3J_47_SnMiiXEQLahGQ_sCElz4qZ");
+const supabaseClient = createClient("https://htbxnypwbgiwkwmqezmr.supabase.co", "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0YnhueXB3Ymdpd2t3bXFlem1yIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjUyODk1ODUsImV4cCI6MjA4MDg2NTU4NX0.ZUqnPruYOfIz_VVAILWZxsE9k9aqM0ruLllLm-Bnqvg");
 
 const successMessage = document.getElementById("successMessage");
 const errorMessage = document.getElementById("errorMessage");
@@ -288,7 +288,7 @@ form.addEventListener("submit", async (e) => {
 
   // Insert into DB
   const { data: inserted, error } = await supabaseClient
-    .from("public.app_users")
+    .from("app_users")
     .insert([payload]);
 
   if (error) {
