--- a/index.html
+++ b/index.html
@@ -1,39 +1,100 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Marianville Secondary School — Layout</title>
+  <title>Marianville Secondary School — Welcome</title>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
   <style>
     :root{
       --gap: 18px;
       --max-width: 1200px;
-      --bg: #e6fbff;
-      --card: #ffffff;
-      --accent: #6b21a8; /* rebeccapurple-ish */
-      --muted: #6b7280;
-      --accent-2: #9ae6b4; /* yellowgreen-ish */
-      --radius: 12px;
-      --shadow: 0 8px 20px rgba(16,24,40,0.08);
-      --glass: linear-gradient(135deg, rgba(255,255,255,0.6), rgba(255,255,255,0.3));
+      --bg: #0a0a1a;
+      --card: rgba(255,255,255,0.03);
+      --card-border: rgba(255,255,255,0.08);
+      --accent: #a855f7;
+      --accent-glow: rgba(168,85,247,0.4);
+      --accent-2: #22d3ee;
+      --accent-2-glow: rgba(34,211,238,0.3);
+      --accent-3: #f472b6;
+      --muted: rgba(255,255,255,0.6);
+      --text: #f8fafc;
+      --radius: 16px;
+      --shadow: 0 8px 32px rgba(0,0,0,0.3);
+      --glass: linear-gradient(135deg, rgba(255,255,255,0.1), rgba(255,255,255,0.02));
     }
 
-    /* Global reset & type */
+    @keyframes float {
+      0%, 100% { transform: translateY(0px); }
+      50% { transform: translateY(-10px); }
+    }
+
+    @keyframes pulse-glow {
+      0%, 100% { box-shadow: 0 0 20px var(--accent-glow), 0 0 40px rgba(168,85,247,0.2); }
+      50% { box-shadow: 0 0 30px var(--accent-glow), 0 0 60px rgba(168,85,247,0.3); }
+    }
+
+    @keyframes gradient-shift {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    @keyframes shimmer {
+      0% { background-position: -200% 0; }
+      100% { background-position: 200% 0; }
+    }
+
+    @keyframes fade-in-up {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
       margin:0;
-      font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-      background: linear-gradient(180deg,#f0fcff 0%, var(--bg) 100%);
-      color:#0f172a;
+      font-family: 'Outfit', Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+      background: var(--bg);
+      background-image: 
+        radial-gradient(ellipse at 20% 20%, rgba(168,85,247,0.15) 0%, transparent 50%),
+        radial-gradient(ellipse at 80% 80%, rgba(34,211,238,0.1) 0%, transparent 50%),
+        radial-gradient(ellipse at 50% 50%, rgba(244,114,182,0.08) 0%, transparent 60%);
+      color: var(--text);
       -webkit-font-smoothing:antialiased;
       -moz-osx-font-smoothing:grayscale;
-      line-height:1.45;
+      line-height:1.5;
       padding:32px 16px;
       display:flex;
       justify-content:center;
+      min-height:100vh;
+    }
+
+    /* Animated background orbs */
+    body::before,
+    body::after {
+      content: '';
+      position: fixed;
+      border-radius: 50%;
+      filter: blur(80px);
+      z-index: -1;
+      animation: float 8s ease-in-out infinite;
+    }
+    body::before {
+      width: 400px;
+      height: 400px;
+      background: var(--accent-glow);
+      top: 10%;
+      left: 10%;
+    }
+    body::after {
+      width: 300px;
+      height: 300px;
+      background: var(--accent-2-glow);
+      bottom: 20%;
+      right: 15%;
+      animation-delay: -4s;
     }
 
     .site{
@@ -43,40 +104,54 @@
       grid-template-columns: repeat(12, 1fr);
       gap:var(--gap);
       align-items:start;
+      position: relative;
+      z-index: 1;
     }
 
     /* Header */
     header{
       grid-column: 1 / -1;
       background: var(--glass);
+      backdrop-filter: blur(20px);
+      -webkit-backdrop-filter: blur(20px);
       border-radius: var(--radius);
-      padding:20px 24px;
+      padding: 24px 32px;
       display:flex;
       justify-content:space-between;
       align-items:center;
-      box-shadow: var(--shadow);
-      border: 1px solid rgba(107,33,168,0.06);
+      box-shadow: var(--shadow), inset 0 1px 0 rgba(255,255,255,0.1);
+      border: 1px solid var(--card-border);
+      animation: fade-in-up 0.6s ease-out;
     }
     header h1{
       margin:0;
-      font-size:1.25rem;
-      color:var(--accent);
-      letter-spacing:0.2px;
+      font-size:1.5rem;
+      font-weight: 700;
+      background: linear-gradient(135deg, var(--accent), var(--accent-2), var(--accent-3));
+      background-size: 200% 200%;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      animation: gradient-shift 4s ease infinite;
     }
     header .sub{
-      color:var(--muted);
-      font-size:0.9rem;
+      color: var(--muted);
+      font-size:0.95rem;
+      font-weight: 500;
     }
 
     /* Navigation (left column) */
     nav.nav{
       grid-column: 1 / 3;
-      background: linear-gradient(180deg, #ffffff, #fafafa);
-      padding:18px;
-      border-radius:10px;
-      border:1px solid rgba(16,24,40,0.04);
-      box-shadow: 0 6px 14px rgba(10,10,20,0.04);
+      background: var(--glass);
+      backdrop-filter: blur(16px);
+      -webkit-backdrop-filter: blur(16px);
+      padding: 20px;
+      border-radius: var(--radius);
+      border: 1px solid var(--card-border);
+      box-shadow: var(--shadow);
       height:fit-content;
+      animation: fade-in-up 0.6s ease-out 0.1s both;
     }
     nav.nav ul{
       list-style:none;
@@ -84,172 +159,331 @@
       padding:0;
       display:flex;
       flex-direction:column;
-      gap:10px;
+      gap:8px;
     }
     nav.nav a{
-      display:block;
-      padding:10px 12px;
-      border-radius:8px;
-      color:var(--accent);
+      display:flex;
+      align-items: center;
+      gap: 10px;
+      padding: 12px 16px;
+      border-radius: 10px;
+      color: var(--text);
       text-decoration:none;
-      font-weight:600;
-      transition:all .18s ease;
-      border:1px solid transparent;
+      font-weight: 500;
+      transition: all 0.25s ease;
+      border: 1px solid transparent;
+      position: relative;
+      overflow: hidden;
+    }
+    nav.nav a::before {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 0;
+      height: 100%;
+      width: 3px;
+      background: linear-gradient(180deg, var(--accent), var(--accent-2));
+      transform: scaleY(0);
+      transition: transform 0.25s ease;
     }
     nav.nav a:hover{
-      background: linear-gradient(90deg, rgba(107,33,168,0.06), rgba(154,230,180,0.06));
-      transform:translateX(4px);
-      border-color: rgba(107,33,168,0.08);
+      background: rgba(168,85,247,0.1);
+      transform: translateX(6px);
+      border-color: rgba(168,85,247,0.2);
+      box-shadow: 0 0 20px rgba(168,85,247,0.15);
+    }
+    nav.nav a:hover::before {
+      transform: scaleY(1);
     }
 
-    /* Main content spans columns 3-10 */
+    /* Link icons */
+    nav.nav a[href*="google"]::before { content: '🔍'; position: static; transform: none; width: auto; height: auto; background: none; }
+    nav.nav a[href*="youtube"]::before { content: '▶️'; position: static; transform: none; width: auto; height: auto; background: none; }
+    nav.nav a[href*="facebook"]::before { content: '👥'; position: static; transform: none; width: auto; height: auto; background: none; }
+
+    /* Main content */
     main{
       grid-column: 3 / 10;
-      background:var(--card);
-      padding:20px;
-      border-radius:10px;
-      box-shadow:var(--shadow);
-      border:1px solid rgba(16,24,40,0.04);
+      background: var(--glass);
+      backdrop-filter: blur(16px);
+      -webkit-backdrop-filter: blur(16px);
+      padding: 28px;
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      border: 1px solid var(--card-border);
+      animation: fade-in-up 0.6s ease-out 0.2s both;
     }
     main h2{
-      margin-top:0;
-      color:#0f172a;
-      font-size:1.1rem;
+      margin: 0 0 20px 0;
+      font-size: 1.4rem;
+      font-weight: 700;
+      background: linear-gradient(135deg, var(--text), var(--accent-2));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
     }
+
     .profile{
       display:flex;
-      gap:16px;
+      gap: 24px;
       align-items:center;
+      padding: 20px;
+      background: rgba(255,255,255,0.02);
+      border-radius: 14px;
+      border: 1px solid var(--card-border);
     }
     .profile img{
-      width:140px;
-      height:140px;
-      object-fit:cover;
-      border-radius:12px;
-      box-shadow:0 8px 20px rgba(16,24,40,0.08);
-      border:4px solid rgba(255,255,255,0.6);
-      background:linear-gradient(180deg,#fff,#f7f7fb);
+      width: 150px;
+      height: 150px;
+      object-fit: cover;
+      border-radius: 14px;
+      box-shadow: 0 0 30px var(--accent-glow), 0 8px 32px rgba(0,0,0,0.3);
+      border: 2px solid rgba(168,85,247,0.3);
+      animation: pulse-glow 3s ease-in-out infinite;
     }
-    .profile .meta{color:var(--muted)}
+    .profile .meta{
+      color: var(--muted);
+      font-size: 0.95rem;
+      line-height: 1.7;
+    }
+    .profile .meta strong {
+      color: var(--text);
+      font-weight: 600;
+    }
+
+    /* Info cards */
+    .info-cards {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 16px;
+      margin-top: 20px;
+    }
+    .info-card {
+      background: rgba(168,85,247,0.08);
+      border: 1px solid rgba(168,85,247,0.15);
+      border-radius: 12px;
+      padding: 18px;
+      transition: all 0.3s ease;
+    }
+    .info-card:hover {
+      background: rgba(168,85,247,0.12);
+      transform: translateY(-4px);
+      box-shadow: 0 10px 30px rgba(168,85,247,0.2);
+    }
+    .info-card h4 {
+      margin: 0 0 8px 0;
+      font-size: 0.9rem;
+      color: var(--accent-2);
+      font-weight: 600;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+    }
+    .info-card p {
+      margin: 0;
+      color: var(--text);
+      font-weight: 500;
+    }
 
     /* Aside (right column) */
     aside{
       grid-column: 10 / 13;
-      background:linear-gradient(180deg,#fff,#fbfffc);
-      padding:16px;
-      border-radius:10px;
-      border:1px solid rgba(107,33,168,0.06);
+      background: var(--glass);
+      backdrop-filter: blur(16px);
+      -webkit-backdrop-filter: blur(16px);
+      padding: 20px;
+      border-radius: var(--radius);
+      border: 1px solid var(--card-border);
+      box-shadow: var(--shadow);
       height:fit-content;
+      animation: fade-in-up 0.6s ease-out 0.3s both;
     }
-    aside p{margin:0 0 8px 0;color:var(--muted)}
+    aside h3 {
+      margin: 0 0 12px 0;
+      font-size: 1rem;
+      font-weight: 700;
+      color: var(--accent);
+    }
+    aside p{
+      margin:0 0 16px 0;
+      color: var(--muted);
+      font-size: 0.9rem;
+    }
 
-    /* Footer full width */
+    .quick-links {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+    }
+    .quick-links a {
+      display: block;
+      padding: 10px 14px;
+      background: rgba(34,211,238,0.08);
+      border: 1px solid rgba(34,211,238,0.15);
+      border-radius: 8px;
+      color: var(--accent-2);
+      text-decoration: none;
+      font-weight: 500;
+      font-size: 0.9rem;
+      transition: all 0.25s ease;
+    }
+    .quick-links a:hover {
+      background: rgba(34,211,238,0.15);
+      transform: translateX(4px);
+      box-shadow: 0 0 15px rgba(34,211,238,0.2);
+    }
+
+    /* Footer */
     footer{
       grid-column:1 / -1;
       display:flex;
       justify-content:space-between;
       gap:12px;
       align-items:center;
-      padding:12px 16px;
-      color:var(--muted);
+      padding: 20px 24px;
+      background: var(--glass);
+      backdrop-filter: blur(16px);
+      -webkit-backdrop-filter: blur(16px);
+      border-radius: var(--radius);
+      border: 1px solid var(--card-border);
+      color: var(--muted);
       font-size:0.9rem;
+      margin-top: 8px;
+      animation: fade-in-up 0.6s ease-out 0.4s both;
+    }
+    footer span:first-child {
+      font-weight: 600;
+      background: linear-gradient(135deg, var(--accent), var(--accent-2));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
     }
 
-    /* Utility */
-    .card{
-      background:#fff;
-      padding:12px;
-      border-radius:10px;
-      border:1px solid rgba(16,24,40,0.03);
+    /* Welcome banner */
+    .welcome-banner {
+      grid-column: 1 / -1;
+      background: linear-gradient(135deg, rgba(168,85,247,0.2), rgba(34,211,238,0.15), rgba(244,114,182,0.1));
+      border: 1px solid rgba(168,85,247,0.2);
+      border-radius: var(--radius);
+      padding: 32px 40px;
+      text-align: center;
+      animation: fade-in-up 0.6s ease-out 0.15s both;
+      position: relative;
+      overflow: hidden;
     }
-    .list-reset{margin:0;padding:0;list-style:none}
-    .links a{color:var(--accent);text-decoration:none}
-    .links a:hover{text-decoration:underline}
+    .welcome-banner::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 200%;
+      height: 100%;
+      background: linear-gradient(90deg, transparent, rgba(255,255,255,0.1), transparent);
+      animation: shimmer 3s ease-in-out infinite;
+    }
+    .welcome-banner h2 {
+      margin: 0;
+      font-size: 2rem;
+      font-weight: 800;
+      background: linear-gradient(135deg, #fff, var(--accent-2), var(--accent));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      position: relative;
+      z-index: 1;
+    }
 
-    /* Responsive: stack at smaller widths */
+    /* Responsive */
     @media (max-width:900px){
-      nav.nav{grid-column:1 / -1; order:1}
-      main{grid-column:1 / -1; order:2}
-      aside{grid-column:1 / -1; order:3}
+      nav.nav{grid-column:1 / -1; order:2}
+      main{grid-column:1 / -1; order:3}
+      aside{grid-column:1 / -1; order:4}
       header{order:0}
-      footer{order:4}
-      .profile{flex-direction:row; gap:12px}
-      .profile img{width:96px;height:96px}
+      .welcome-banner{order:1}
+      footer{order:5}
+      .profile{flex-direction:row; gap:16px}
+      .profile img{width:100px;height:100px}
+      .info-cards{grid-template-columns:1fr}
     }
 
     @media (max-width:420px){
-      body{padding:16px}
-      header h1{font-size:1rem}
+      body{padding:16px 12px}
+      header h1{font-size:1.2rem}
       .profile img{width:80px;height:80px}
+      .welcome-banner h2{font-size:1.4rem}
+      .welcome-banner{padding:24px 20px}
     }
   </style>
 </head>
 
 <body>
-  <div class="site" role="document">
+  <div class="site">
+
     <header>
-      <img src ="MarianvilleLogo.jpg"> 
-     <div>
-        <h1>Marianville Secondary School</h1>
-        <div class="sub">Excellence • Community • Growth</div>
+      <div>
+        <h1>✨ Marianville Secondary School</h1>
+        <p class="sub">Excellence • Community • Growth</p>
       </div>
-      <div class="sub">Welcome to the Marianville Webpage 2025</div>
     </header>
 
-    <nav class="nav" aria-label="Main navigation">
+    <div class="welcome-banner">
+      <h2>🎓 Welcome to Marianville 2025</h2>
+    </div>
+
+    <nav class="nav">
       <ul>
-        <li><a href="www.google.com">Google</a></li>
-        <li><a href="www.youtube.com">Youtube</a></li>
-        <li><a href="#www.facebook.com">Facebook</a></li>
-        <li><a href="https://www.google.com" target="_blank" rel="noopener">External: Google</a></li>
+        <li><a href="https://google.com" target="_blank">Google</a></li>
+        <li><a href="https://youtube.com" target="_blank">YouTube</a></li>
+        <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
       </ul>
     </nav>
 
     <main>
-      <h2 id="section1">Section 1 — Option overview</h2>
+      <h2>📋 Section 1 — Registration Overview</h2>
 
-      <div class="profile" style="margin-bottom:12px">
-        <!-- Use a relative path or place 'apple2.jpeg' alongside this HTML for portability -->
-        <img src="MarianvilleLogo.jpg" alt="Marianville Logo Image" />
+      <div class="profile">
+        <img src="https://images.unsplash.com/photo-1523050854058-8df90110c9f1?w=300&h=300&fit=crop" alt="School Building">
         <div class="meta">
-          <strong>Parents * Guardians* Students</strong>
-          <p style="margin:.35rem 0 0 0">Welcome to Marianville Secondary School Website. This page is created for Registration Purpose.
-          Registration Information and Forms will be posted here. </p>
+          <strong>Parents • Guardians • Students</strong><br><br>
+          Welcome to Marianville Secondary School Website. This page is created for Registration Purpose.
+          Registration Information and Forms will be posted here.
         </div>
       </div>
 
-      <section id="students" class="card" aria-labelledby="students-heading">
-        <h3 id="students-heading" style="margin-top:0">Registration Information to be Posted Soon</h3>
-        <ol style="margin:0 0 0 1.15rem">
-        <li>School ends at 5th December 2025</li>
-          <li>School Commences: 19 January 2026</li>
-        </ol>
-      </section>
+      <div class="info-cards">
+        <div class="info-card">
+          <h4>📢 Notice</h4>
+          <p>Registration Information to be Posted Soon</p>
+        </div>
+        <div class="info-card">
+          <h4>📅 School Ends</h4>
+          <p>5th December 2025</p>
+        </div>
+        <div class="info-card">
+          <h4>🚀 School Commences</h4>
+          <p>19th January 2026</p>
+        </div>
+        <div class="info-card">
+          <h4>📝 Forms</h4>
+          <p>Available in Quick Links →</p>
+        </div>
+      </div>
     </main>
 
     <aside>
-      <h4 style="margin:0 0 8px 0">Navigation / Quick Info</h4>
-      <p>Quick links and resources.</p>
-      <div class="card links" style="margin-top:10px">
-        <strong>Useful links</strong>
-        <ul class="list-reset" style="margin-top:8px">
-          <li><a href="#" aria-label="School portal">Registration Information</a></li>
-          <li><a href="form.html" aria-label="Library">Registration Forms</a></li>
-          <a href="contact.html" aria-label="Contact page">Contact-Us</a>
-         
-        </ul>
+      <h3>🔗 Quick Links</h3>
+      <p>Navigation & Resources</p>
+      <div class="quick-links">
+        <a href="#">📄 Registration Information</a>
+        <a href="#">📝 Registration Forms</a>
+        <a href="#">📧 Contact Us</a>
       </div>
     </aside>
 
     <footer>
-      <div>© Marianville Secondary School</div>
-      <div class="sub">Design system • Designed by Mr. Marampau</div>
+      <span>© 2025 Marianville Secondary School</span>
+      <span>Designed by Mr. Marampau</span>
     </footer>
+
   </div>
 </body>
 </html>
-
-
-
-
-
