--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
       <h2>📋 Section 1 — Registration Overview</h2>
 
       <div class="profile">
-        <img src="MarianvilleLogo.jpg" alt="School Building">
+        <img src="/MarianvilleLogo.jpg" alt="Logo">
         <div class="meta">
           <strong>Parents • Guardians • Students</strong><br><br>
           Welcome to Marianville Secondary School Website. This page is created for Registration Purpose.
