--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     :root{
       --gap: 18px;
       --max-width: 1200px;
-      --bg: #0a0a1a;
-      --card: rgba(255,255,255,0.03);
-      --card-border: rgba(255,255,255,0.08);
-      --accent: #a855f7;
-      --accent-glow: rgba(168,85,247,0.4);
-      --accent-2: #22d3ee;
-      --accent-2-glow: rgba(34,211,238,0.3);
-      --accent-3: #f472b6;
-      --muted: rgba(255,255,255,0.6);
-      --text: #f8fafc;
+      --bg: #fffaf5;
+      --card: rgba(255,255,255,0.9);
+      --card-border: rgba(234,88,12,0.15);
+      --accent: #ea580c;
+      --accent-glow: rgba(234,88,12,0.3);
+      --accent-2: #f97316;
+      --accent-2-glow: rgba(249,115,22,0.25);
+      --accent-3: #fb923c;
+      --muted: rgba(0,0,0,0.5);
+      --text: #1c1917;
       --radius: 16px;
-      --shadow: 0 8px 32px rgba(0,0,0,0.3);
-      --glass: linear-gradient(135deg, rgba(255,255,255,0.1), rgba(255,255,255,0.02));
+      --shadow: 0 8px 32px rgba(234,88,12,0.1);
+      --glass: linear-gradient(135deg, rgba(255,255,255,0.95), rgba(255,255,255,0.8));
     }
 
     @keyframes float {
@@ -31,8 +31,8 @@
     }
 
     @keyframes pulse-glow {
-      0%, 100% { box-shadow: 0 0 20px var(--accent-glow), 0 0 40px rgba(168,85,247,0.2); }
-      50% { box-shadow: 0 0 30px var(--accent-glow), 0 0 60px rgba(168,85,247,0.3); }
+      0%, 100% { box-shadow: 0 0 20px var(--accent-glow), 0 0 40px rgba(234,88,12,0.15); }
+      50% { box-shadow: 0 0 30px var(--accent-glow), 0 0 60px rgba(234,88,12,0.25); }
     }
 
     @keyframes gradient-shift {
@@ -58,9 +58,9 @@
       font-family: 'Outfit', Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
       background: var(--bg);
       background-image: 
-        radial-gradient(ellipse at 20% 20%, rgba(168,85,247,0.15) 0%, transparent 50%),
-        radial-gradient(ellipse at 80% 80%, rgba(34,211,238,0.1) 0%, transparent 50%),
-        radial-gradient(ellipse at 50% 50%, rgba(244,114,182,0.08) 0%, transparent 60%);
+        radial-gradient(ellipse at 20% 20%, rgba(234,88,12,0.08) 0%, transparent 50%),
+        radial-gradient(ellipse at 80% 80%, rgba(249,115,22,0.06) 0%, transparent 50%),
+        radial-gradient(ellipse at 50% 50%, rgba(251,146,60,0.05) 0%, transparent 60%);
       color: var(--text);
       -webkit-font-smoothing:antialiased;
       -moz-osx-font-smoothing:grayscale;
@@ -187,10 +187,10 @@
       transition: transform 0.25s ease;
     }
     nav.nav a:hover{
-      background: rgba(168,85,247,0.1);
+      background: rgba(234,88,12,0.08);
       transform: translateX(6px);
-      border-color: rgba(168,85,247,0.2);
-      box-shadow: 0 0 20px rgba(168,85,247,0.15);
+      border-color: rgba(234,88,12,0.2);
+      box-shadow: 0 0 20px rgba(234,88,12,0.1);
     }
     nav.nav a:hover::before {
       transform: scaleY(1);
@@ -237,8 +237,8 @@
       height: 150px;
       object-fit: cover;
       border-radius: 14px;
-      box-shadow: 0 0 30px var(--accent-glow), 0 8px 32px rgba(0,0,0,0.3);
-      border: 2px solid rgba(168,85,247,0.3);
+      box-shadow: 0 0 30px var(--accent-glow), 0 8px 32px rgba(0,0,0,0.1);
+      border: 2px solid rgba(234,88,12,0.3);
       animation: pulse-glow 3s ease-in-out infinite;
     }
     .profile .meta{
@@ -259,16 +259,16 @@
       margin-top: 20px;
     }
     .info-card {
-      background: rgba(168,85,247,0.08);
-      border: 1px solid rgba(168,85,247,0.15);
+      background: rgba(234,88,12,0.05);
+      border: 1px solid rgba(234,88,12,0.12);
       border-radius: 12px;
       padding: 18px;
       transition: all 0.3s ease;
     }
     .info-card:hover {
-      background: rgba(168,85,247,0.12);
+      background: rgba(234,88,12,0.1);
       transform: translateY(-4px);
-      box-shadow: 0 10px 30px rgba(168,85,247,0.2);
+      box-shadow: 0 10px 30px rgba(234,88,12,0.15);
     }
     .info-card h4 {
       margin: 0 0 8px 0;
@@ -317,19 +317,19 @@
     .quick-links a {
       display: block;
       padding: 10px 14px;
-      background: rgba(34,211,238,0.08);
-      border: 1px solid rgba(34,211,238,0.15);
+      background: rgba(249,115,22,0.08);
+      border: 1px solid rgba(249,115,22,0.15);
       border-radius: 8px;
-      color: var(--accent-2);
+      color: var(--accent);
       text-decoration: none;
       font-weight: 500;
       font-size: 0.9rem;
       transition: all 0.25s ease;
     }
     .quick-links a:hover {
-      background: rgba(34,211,238,0.15);
+      background: rgba(249,115,22,0.15);
       transform: translateX(4px);
-      box-shadow: 0 0 15px rgba(34,211,238,0.2);
+      box-shadow: 0 0 15px rgba(249,115,22,0.15);
     }
 
     /* Footer */
@@ -361,8 +361,8 @@
     /* Welcome banner */
     .welcome-banner {
       grid-column: 1 / -1;
-      background: linear-gradient(135deg, rgba(168,85,247,0.2), rgba(34,211,238,0.15), rgba(244,114,182,0.1));
-      border: 1px solid rgba(168,85,247,0.2);
+      background: linear-gradient(135deg, rgba(234,88,12,0.12), rgba(249,115,22,0.1), rgba(251,146,60,0.08));
+      border: 1px solid rgba(234,88,12,0.2);
       border-radius: var(--radius);
       padding: 32px 40px;
       text-align: center;
@@ -384,7 +384,7 @@
       margin: 0;
       font-size: 2rem;
       font-weight: 800;
-      background: linear-gradient(135deg, #fff, var(--accent-2), var(--accent));
+      background: linear-gradient(135deg, var(--accent), var(--accent-2), var(--accent-3));
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       background-clip: text;
@@ -441,7 +441,7 @@
       <h2>📋 Section 1 — Registration Overview</h2>
 
       <div class="profile">
-        <img src="/MarianvilleLogo.jpg" alt="Logo">
+        <img src="https://images.unsplash.com/photo-1523050854058-8df90110c9f1?w=300&h=300&fit=crop" alt="School Building">
         <div class="meta">
           <strong>Parents • Guardians • Students</strong><br><br>
           Welcome to Marianville Secondary School Website. This page is created for Registration Purpose.
