--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
       <h2>📋 Section 1 — Registration Overview</h2>
 
       <div class="profile">
-        <img src="https://images.unsplash.com/photo-1523050854058-8df90110c9f1?w=300&h=300&fit=crop" alt="School Building">
+        <img src="/MarianvilleLogo.jpg" alt="Logo">
         <div class="meta">
           <strong>Parents • Guardians • Students</strong><br><br>
           Welcome to Marianville Secondary School Website. This page is created for Registration Purpose.
