--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 
     <header>
       <div>
-        <h1>✨ Marianville Secondary School</h1>
+        <h1 img src="/MarianvilleLogo.jpg"> Marianville Secondary School</h1>
         <p class="sub">Excellence • Community • Growth</p>
       </div>
     </header>
