--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 
     <header>
       <div>
-        <h1 img src="/MarianvilleLogo.jpg"> Marianville Secondary School</h1>
+        <h1 img src="MarianvilleLogo.jpg"> Marianville Secondary School</h1>
         <p class="sub">Excellence • Community • Growth</p>
       </div>
     </header>
@@ -441,7 +441,7 @@
       <h2>📋 Section 1 — Registration Overview</h2>
 
       <div class="profile">
-        <img src="/MarianvilleLogo.jpg" alt="Logo">
+        <img src="MarianvilleLogo.jpg" alt="Logo">
         <div class="meta">
           <strong>Parents • Guardians • Students</strong><br><br>
           Welcome to Marianville Secondary School Website. This page is created for Registration Purpose.
