--- a/index.html
+++ b/index.html
@@ -419,8 +419,9 @@
   <div class="site">
 
     <header>
-      <div>
-        <h1> <img src="./MarianvilleLogo.jpg"> Marianville Secondary School</h1>
+      <div> 
+          <div style="align:center"> <img src="./MarianvilleLogo.jpg"> </div
+        <h1>  Marianville Secondary School</h1>
         <p class="sub">Excellence • Community • Growth</p>
       </div>
     </header>
