--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
       <p>Navigation & Resources</p>
       <div class="quick-links">
         <a href="#">📄 Registration Information</a>
-        <a href=./form.html">📝 Registration Forms</a>
+        <a href=form.html">📝 Registration Forms</a>
         <a href="./contact.html">📧 Contact Us</a>
       </div>
     </aside>
