--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
     </header>
 
     <div class="welcome-banner">
-      <h2>🎓 Welcome to Marianville 2025</h2>
+      <h2>🎓 Welcome to Marianville Webpage</h2>
     </div>
 
     <nav class="nav">
@@ -439,7 +439,7 @@
     </nav>
 
     <main>
-      <h2>📋 Section 1 — Registration Overview</h2>
+      <h2>📋 Registration Overview</h2>
 
       <div class="profile">
         <img src="./MarianvilleLogo.jpg" alt="Logo">
