--- a/form.html
+++ b/form.html
@@ -205,6 +205,9 @@ button{
 </div>
 
 <button type="submit">Submit Registration</button>
+<button type="button" id="downloadPdfBtn">Download PDF</button>
+<button type="button" id="downloadDocxBtn">Download DOCX</button>
+
 
 </form>
 </div>
@@ -306,6 +309,48 @@ form.addEventListener("submit", async (e) => {
   form.reset();
 });
 </script>
+
+  <script>
+// ========= PDF DOWNLOAD =========
+document.getElementById("downloadPdfBtn").addEventListener("click", () => {
+
+  const element = document.querySelector(".container");
+
+  const opt = {
+    margin:       10,
+    filename:     'registration-form.pdf',
+    image:        { type: 'jpeg', quality: 0.98 },
+    html2canvas:  { scale: 2 },
+    jsPDF:        { unit: 'mm', format: 'a4', orientation: 'portrait' }
+  };
+
+  html2pdf().set(opt).from(element).save();
+});
+
+
+// ========= DOCX DOWNLOAD =========
+document.getElementById("downloadDocxBtn").addEventListener("click", () => {
+
+  const content = document.querySelector(".container").innerHTML;
+
+  const pageHTML =
+    '<!DOCTYPE html><html><head><meta charset="UTF-8"></head><body>' +
+    content +
+    '</body></html>';
+
+  const converted = htmlDocx.asBlob(pageHTML);
+
+  saveAs(converted, 'registration-form.docx');
+});
+</script>
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html-docx-js/0.4.1/html-docx.js"></script>
+
 
 </body>
 </html>
