--- a/form.html
+++ b/form.html
@@ -334,10 +334,8 @@ document.getElementById("downloadPdfBtn").addEventListener("click", () => {
 
  
   
-<script src="https://unpkg.com/html-docx-js@0.3.1/index.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
-
-<script>
+<script src="https://unpkg.com/html-docx-js@0.3.1/index.js">
+  <script>
 document.getElementById("downloadDocxBtn").addEventListener("click", () => {
 
   const container = document.querySelector(".container");
@@ -361,6 +359,10 @@ document.getElementById("downloadDocxBtn").addEventListener("click", () => {
   saveAs(blob, "registration-form.docx");
 });
 </script>
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
+
+
 
     
    
