--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
       <h3>🔗 Quick Links</h3>
       <p>Navigation & Resources</p>
       <div class="quick-links">
-        <a href="#">📄 Registration Information</a>
+        <a href="#">📄 Downloadable Enrolment Form</a>
         <a href="form.html">📝 Registration Forms</a>
         <a href="./contact.html">📧 Contact Us</a>
       </div>
