Update registration information and fix typos

--- a/index.html
+++ b/index.html
@@ -453,7 +453,8 @@
       <div class="info-cards">
         <div class="info-card">
           <h4>📢 Notice</h4>
-          <p>Registration Information to be Posted Soon</p>
+          <p>Grade 10 Registration is today. </p> <br>
+          <p> Grade 9 Registration has been postponded to Friday 16th-January-2026 </p>
         </div>
         <div class="info-card">
           <h4>📅 School Ends</h4>
@@ -475,7 +476,7 @@
       <p>Navigation & Resources</p>
       <div class="quick-links">
             <a href="./Marianville_Enrollment_Form.docx" download="Marianville_Enrolment_Form.docx" aria-label="Download Marianville enrolment form">
-    📄 Downloade Enrolment Form Now!!
+    📄 Download Enrolment Form Now!!
   </a>
         
         <a href="form.html">📝 Registration Forms</a>
