--- a/index.html
+++ b/index.html
@@ -466,10 +466,7 @@
         </div>
         <div class="info-card">
           <h4>📝 Forms</h4>
-          <p>Available in Quick Links →
-         <object data="Marianville_Enrollment_Form.docx" type="application/docx" width="100%" height="600px">
-  <p>Alternative text if the PDF cannot be displayed.</p>
-</object></p>
+          <p>Available in Quick Links →</p>
         </div>
       </div>
     </main>
