--- a/index.html
+++ b/index.html
@@ -475,8 +475,8 @@
       <h3>🔗 Quick Links</h3>
       <p>Navigation & Resources</p>
       <div class="quick-links">
-            <a href="./Marianville_Enrollment_Form.docx" download="Marianville_Enrolment_Form.docx" aria-label="Download Marianville enrolment form">
-    📄 Download Enrolment Form Now!!
+            <a href="https://marianville-enrolment-form.lovable.app" download="Marianville_Enrolment_Form.docx" aria-label="Download Marianville enrolment form">
+    📄 Get the Enrolment Form Now!!
   </a>
         
         <a href="form.html">📝 Registration Forms</a>
